# harshu_ai_os

./: .env.example  .gitignore  README.md  pyproject.toml
data/: active_runtime_modules.csv  runtime_modules.csv
docs/: learning_log.md  setup_notes.md
examples/documents/: harshu_ai_os_overview.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.js  styles.css
scripts/: seed_notes.py
src/harshu_ai_os/api/: main.py  schemas.py
src/harshu_ai_os/kernel/: account.py  cli.py  config.py  data_structures.py  decorators.py  errors.py  filter_runtime_modules.py  logger.py  logger_practice.py  performance.py  runtime_config.json  runtime_events.txt  runtime_input.txt  runtime_modules.csv  runtime_profile.py  state.py  utils.py  vehicles.py
src/harshu_ai_os/llm/: client.py  exceptions.py  messages.py  router.py
src/harshu_ai_os/rag/: chroma_store.py  chunker.py  embedding_client.py  generator.py  ingestion.py  prompt.py  retriever.py  service.py
src/harshu_ai_os/tests/: test_api.py  test_chroma_store.py  test_chunker.py  test_health.py  test_ingestion.py  test_prompt.py  test_rag_generator.py  test_rag_service.py  test_retriever.py  test_router.py
