[project]
name = "harshu-ai-os"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "litellm>=1.92.0",
    "python-dotenv==1.2.2",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ruff>=0.15.21",
]
