[project]
name = "harshu-ai-os"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.1",
    "google-genai>=2.12.1",
    "litellm>=1.92.0",
    "numpy>=2.5.1",
    "python-dotenv==1.2.2",
    "scikit-learn>=1.9.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
